test/selenium/workspaces_new.js
// 1) Workspaces New
// As PD Admin
//   Clicking topbar link
//     should display new workspace creation form:
// ElementNotInteractableError: element not interactable
// (Session info: chrome=91.0.4472.77)
// at Object.throwDecodedError (node_modules/selenium-webdriver/lib/error.js:517:15)
// at parseHttpResponse (node_modules/selenium-webdriver/lib/http.js:671:13)
// at Executor.execute (node_modules/selenium-webdriver/lib/http.js:597:28)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)
// at async thenableWebDriverProxy.execute (node_modules/selenium-webdriver/lib/webdriver.js:731:17)
// at async Context.<anonymous> (test/selenium/workspaces_new.js:50:15)

// 2) Workspaces New
// As PD Admin
//   Navigating directly
//     should display new workspace creation form:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:76:93)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 3) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display teacher input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 4) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display assignment input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 5) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display problem input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 6) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display section input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 7) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display date input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 8) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display owner input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 9) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display name input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 10) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display folders input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 11) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display modePrivate input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 12) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display modePublic input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 13) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       privacy setting should be private as default:
// NoSuchElementError: no such element: Unable to locate element: {"method":"css selector","selector":"input[value="private"]"}
// (Session info: chrome=91.0.4472.77)
// at Object.throwDecodedError (node_modules/selenium-webdriver/lib/error.js:517:15)
// at parseHttpResponse (node_modules/selenium-webdriver/lib/http.js:671:13)
// at Executor.execute (node_modules/selenium-webdriver/lib/http.js:597:28)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)
// at async thenableWebDriverProxy.execute (node_modules/selenium-webdriver/lib/webdriver.js:731:17)
// at async Context.<anonymous> (test/selenium/workspaces_new.js:122:37)

// 14) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     teacher pool
//       should contain current user:
// AssertionError: expected undefined to deeply equal true
// at Context.<anonymous> (test/selenium/workspaces_new.js:148:37)
// at processImmediate (internal/timers.js:456:21)

// 15) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     teacher pool
//       clicking x button should clear input:
// AssertionError: the given combination of arguments (undefined and string) is invalid for this assertion. You can use an array, a map, an object, a set, a string, or a weakset instead of a string
// at Context.<anonymous> (test/selenium/workspaces_new.js:155:43)

// 16) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     owner pool
//       should contain current user:
// AssertionError: expected undefined to deeply equal true
// at Context.<anonymous> (test/selenium/workspaces_new.js:183:37)
// at processImmediate (internal/timers.js:456:21)

// 17) Workspaces New
// As PD Admin
//   Should display various inputs/ fields
//     owner pool
//       clicking x button should clear input:
// AssertionError: the given combination of arguments (undefined and string) is invalid for this assertion. You can use an array, a map, an object, a set, a string, or a weakset instead of a string
// at Context.<anonymous> (test/selenium/workspaces_new.js:190:43)

// 18) Workspaces New
// As PD Admin
//   Creating a new workspace
//     Submitting empty form
//       should display error message:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:229:104)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 19) Workspaces New
// As Teacher
//   "before all" hook in "As Teacher":
// Error: ECONNREFUSED connect ECONNREFUSED 127.0.0.1:53635
// at ClientRequest.<anonymous> (node_modules/selenium-webdriver/http/index.js:273:15)
// at ClientRequest.EventEmitter.emit (domain.js:482:12)
// at Socket.socketErrorListener (_http_client.js:426:9)
// at Socket.EventEmitter.emit (domain.js:482:12)
// at emitErrorNT (internal/streams/destroy.js:92:8)
// at emitErrorAndCloseNT (internal/streams/destroy.js:60:3)
// at processTicksAndRejections (internal/process/task_queues.js:84:21)

// 20) Workspaces New
// As Admin
//   Clicking topbar link
//     should display new workspace creation form:
// ElementNotInteractableError: element not interactable
// (Session info: chrome=91.0.4472.77)
// at Object.throwDecodedError (node_modules/selenium-webdriver/lib/error.js:517:15)
// at parseHttpResponse (node_modules/selenium-webdriver/lib/http.js:671:13)
// at Executor.execute (node_modules/selenium-webdriver/lib/http.js:597:28)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)
// at async thenableWebDriverProxy.execute (node_modules/selenium-webdriver/lib/webdriver.js:731:17)
// at async Context.<anonymous> (test/selenium/workspaces_new.js:50:15)

// 21) Workspaces New
// As Admin
//   Navigating directly
//     should display new workspace creation form:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:76:93)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 22) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display teacher input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 23) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display assignment input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 24) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display problem input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 25) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display section input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 26) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Filter Criteria
//       should display date input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:96:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 27) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display owner input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 28) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display name input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 29) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display folders input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 30) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display modePrivate input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 31) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       should display modePublic input:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:115:90)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 32) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     Workspace Settings
//       privacy setting should be private as default:
// NoSuchElementError: no such element: Unable to locate element: {"method":"css selector","selector":"input[value="private"]"}
// (Session info: chrome=91.0.4472.77)
// at Object.throwDecodedError (node_modules/selenium-webdriver/lib/error.js:517:15)
// at parseHttpResponse (node_modules/selenium-webdriver/lib/http.js:671:13)
// at Executor.execute (node_modules/selenium-webdriver/lib/http.js:597:28)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)
// at async thenableWebDriverProxy.execute (node_modules/selenium-webdriver/lib/webdriver.js:731:17)
// at async Context.<anonymous> (test/selenium/workspaces_new.js:122:37)

// 33) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     teacher pool
//       should contain current user:
// AssertionError: expected undefined to deeply equal true
// at Context.<anonymous> (test/selenium/workspaces_new.js:148:37)
// at processImmediate (internal/timers.js:456:21)

// 34) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     teacher pool
//       clicking x button should clear input:
// AssertionError: the given combination of arguments (undefined and string) is invalid for this assertion. You can use an array, a map, an object, a set, a string, or a weakset instead of a string
// at Context.<anonymous> (test/selenium/workspaces_new.js:155:43)

// 35) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     owner pool
//       should contain current user:
// AssertionError: expected undefined to deeply equal true
// at Context.<anonymous> (test/selenium/workspaces_new.js:183:37)
// at processImmediate (internal/timers.js:456:21)

// 36) Workspaces New
// As Admin
//   Should display various inputs/ fields
//     owner pool
//       clicking x button should clear input:
// AssertionError: the given combination of arguments (undefined and string) is invalid for this assertion. You can use an array, a map, an object, a set, a string, or a weakset instead of a string
// at Context.<anonymous> (test/selenium/workspaces_new.js:190:43)

// 37) Workspaces New
// As Admin
//   Creating a new workspace
//     Submitting empty form
//       should display error message:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:229:104)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// 38) Workspaces New
// As Student
//   "before all" hook in "As Student":
// Error: ECONNREFUSED connect ECONNREFUSED 127.0.0.1:53635
// at ClientRequest.<anonymous> (node_modules/selenium-webdriver/http/index.js:273:15)
// at ClientRequest.EventEmitter.emit (domain.js:482:12)
// at Socket.socketErrorListener (_http_client.js:426:9)
// at Socket.EventEmitter.emit (domain.js:482:12)
// at emitErrorNT (internal/streams/destroy.js:92:8)
// at emitErrorAndCloseNT (internal/streams/destroy.js:60:3)
// at processTicksAndRejections (internal/process/task_queues.js:84:21)

// 39) Workspaces New
// As Teacher acting as Student
//   Clicking topbar link
//     should redirect to homepage:
// ElementNotInteractableError: element not interactable
// (Session info: chrome=91.0.4472.77)
// at Object.throwDecodedError (node_modules/selenium-webdriver/lib/error.js:517:15)
// at parseHttpResponse (node_modules/selenium-webdriver/lib/http.js:671:13)
// at Executor.execute (node_modules/selenium-webdriver/lib/http.js:597:28)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)
// at async thenableWebDriverProxy.execute (node_modules/selenium-webdriver/lib/webdriver.js:731:17)
// at async Context.<anonymous> (test/selenium/workspaces_new.js:40:15)

// 40) Workspaces New
// As Teacher acting as Student
//   Navigating directly
//     should redirect to homepage:

// AssertionError: expected false to be true
// + expected - actual

// -false
// +true

// at Context.<anonymous> (test/selenium/workspaces_new.js:68:81)
// at processTicksAndRejections (internal/process/task_queues.js:97:5)

// REQUIRE MODULES
const { Builder, By } = require('selenium-webdriver');
const expect = require('chai').expect;

// REQUIRE FILES
const helpers = require('./helpers');
const dbSetup = require('../data/restore');
const css = require('./selectors');
const testUsers = require('./fixtures/users');

const host = helpers.host;
let url = `${host}/#/workspaces/new`;

describe('Workspaces New', async function() {
  this.timeout(helpers.timeoutTestMsStr);
  function runTests(users) {
    function _runTests(user) {
      const { accountType, actingRole, testDescriptionTitle, _id, username } = user;
      describe(`As ${testDescriptionTitle}`, function() {
        this.timeout(helpers.timeoutTestMsStr);

        let driver = null;
        before(async function() {
          driver = new Builder()
            .forBrowser('chrome')
            .build();
            await dbSetup.prepTestDb();
            return helpers.login(driver, host, user);
          });
        after(function() {
          driver.quit();
        });


        describe('Clicking topbar link', function() {
          if (accountType === 'S' || actingRole === 'student') {
            it('should redirect to homepage', async function() {
              await helpers.findAndClickElement(driver, css.topBar.workspaces);
              await helpers.findAndClickElement(driver, css.topBar.workspacesNew);

              await helpers.waitForUrlMatch(driver, /\//);

              expect(await helpers.isTextInDom(driver, 'Welcome Student')).to.be.true;
              expect(await helpers.isElementVisible(driver, css.newWorkspaceEnc.form)).to.be.false;
            });
          } else {
            it(`should display new workspace creation form`, async function() {
              await helpers.findAndClickElement(driver, css.topBar.workspaces);
              await helpers.findAndClickElement(driver, css.topBar.workspacesNew);
              await helpers.waitForUrlMatch(driver, /workspaces\/new/);
              expect(await helpers.isElementVisible(driver, css.newWorkspaceEnc.form)).to.be.true;
            });
          }
        });

        describe('Navigating directly', function() {
          before(async function() {
            await driver.get(url);

          });

          if (accountType === 'S' || actingRole === 'student') {
            it('should redirect to homepage', async function() {
              await helpers.waitForUrlMatch(driver, /\//);

              expect(await helpers.isTextInDom(driver, 'Welcome Student')).to.be.true;
              expect(await helpers.isElementVisible(driver, css.newWorkspaceEnc.form)).to.be.false;
            });
          } else {
            it(`should display new workspace creation form`, async function() {
              let regex = new RegExp(url);
              await helpers.waitForUrlMatch(driver, regex);

              expect(await helpers.isElementVisible(driver, css.newWorkspaceEnc.form)).to.be.true;
            });
          }
        });

        if (accountType !== 'S' && actingRole !== 'student') {
          describe('Should display various inputs/ fields', function() {
            describe('Filter Criteria', function() {
              const inputs = css.newWorkspaceEnc.filterCriteria.inputs;
              const fixedInputs = css.newWorkspaceEnc.filterCriteria.fixedInputs;
                for (let input of Object.keys(inputs)) {
                  if (accountType === 'T' && input === 'teacher') {
                    // eslint-disable-next-line no-loop-func
                    it(`teacher field should be fixed as teacher's username`, async function() {
                      expect(await helpers.isElementVisible(driver, inputs[input])).to.be.false;
                      expect(await helpers.findAndGetText(driver, fixedInputs.teacher)).to.eql(user.username);
                    });
                  } else {
                    // eslint-disable-next-line no-loop-func
                    it(`should display ${input} input`, async function() {
                      expect(await helpers.isElementVisible(driver, inputs[input])).to.be.true;
                    });
                  }
                }
              });

              describe('Workspace Settings', function() {
                const inputs = css.newWorkspaceEnc.workspaceSettings.inputs;
                const fixedInputs = css.newWorkspaceEnc.workspaceSettings.fixedInputs;
                for (let input of Object.keys(inputs)) {
                  if (accountType === 'T' && input === 'owner') {
                    // eslint-disable-next-line no-loop-func
                    it(`owner field should be fixed as teacher's username`, async function() {
                      expect(await helpers.isElementVisible(driver, inputs[input])).to.be.false;
                      expect(await helpers.findAndGetText(driver, fixedInputs.owner)).to.eql(user.username);
                    });
                  } else {
                      // eslint-disable-next-line no-loop-func
                      it(`should display ${input} input`, async function() {
                      expect(await helpers.isElementVisible(driver, inputs[input])).to.be.true;
                    });
                  }
                }

                it('privacy setting should be private as default', async function() {
                  let privateSel = inputs.modePrivate;
                  let privateMode = await driver.findElement(By.css(privateSel));
                  expect(await privateMode.getAttribute('checked')).to.eql('true');
                });

              });

              it('should display create button', async function() {
                expect(await helpers.isElementVisible(driver, css.newWorkspaceEnc.create));
              });

              describe('teacher pool', function() {
                let selectors = css.newWorkspaceEnc.filterCriteria;
                let teacherSel = selectors.inputs.teacher;
                let test;
                let fixed = selectors.fixedInputs.teacher;
                let clearSelector = css.newWorkspaceEnc.clear;

                before(async function() {
                  // teacherInput = await helpers.getWebElements(driver, selector);
                  if (accountType !== 'T') {
                    test = await helpers.selectOption(driver, teacherSel, _id, true);
                  }

                });
                if (accountType === 'A' || accountType === 'P') {
                  it('should contain current user', function() {
                    expect(test).to.eql(true);
                  });

                  it('clicking x button should clear input', async function() {
                    await helpers.findAndClickElement(driver, clearSelector);
                    let selectText = await helpers.findAndGetText(driver, teacherSel);
                    await driver.sleep(100);
                    expect(selectText).to.contain('Please select');
                  });
                }
                if (accountType === 'T') {
                  it('should be fixed as current user', async function() {
                    expect(await helpers.isElementVisible(driver, teacherSel)).to.be.false;
                  let text = await helpers.findAndGetText(driver, fixed);
                  expect(text).to.eql(username);
                  });

                }
              });
              describe('owner pool', function() {
                let selectors = css.newWorkspaceEnc.workspaceSettings;
                let ownerSel = selectors.inputs.owner;
                let test;
                let fixed = selectors.fixedInputs.owner;
                let clearSelector = css.newWorkspaceEnc.clear;

                before(async function() {
                  // teacherInput = await helpers.getWebElements(driver, selector);
                  if (accountType !== 'T') {
                    test = await helpers.selectOption(driver, ownerSel, _id, true);
                  }

                });
                if (accountType === 'A' || accountType === 'P') {
                  it('should contain current user', function() {
                    expect(test).to.eql(true);
                  });

                  it('clicking x button should clear input', async function() {
                    await helpers.findAndClickElement(driver, clearSelector);
                    let selectText = await helpers.findAndGetText(driver, ownerSel);
                    await driver.sleep(100);
                    expect(selectText).to.contain('Please select');
                  });
                }
                if (accountType === 'T') {
                  it('should be fixed as current user', async function() {
                    expect(await helpers.isElementVisible(driver, ownerSel)).to.be.false;
                  let text = await helpers.findAndGetText(driver, fixed);
                  expect(text).to.eql(username);
                  });

                }
              });
          });

          describe('Creating a new workspace', function() {
            async function submitForm(shouldFail) {
              try {
                const submitButton = await driver.findElement(By.css(css.newWorkspaceEnc.create));
                await submitButton.click();
                if (shouldFail) {
                  await helpers.waitForSelector(driver, css.general.newErrorMessage);
                }

              }catch(err) {
                console.log(`Error submitForm: ${err}`);
              }
            }
            describe('Submitting empty form', function() {
              if (accountType === 'T') {
                it('should create workspace and redirect to workspace page', async function() {
                  await submitForm(false);
                  await helpers.waitForSelector(driver, '.workspace-name');
                  let url = await helpers.getCurrentUrl(driver);
                  expect(url).to.include('submissions');
                });
              } else {
                it('should display error message', async function() {
                  // expect (await helpers.isElementVisible(driver, css.general.errorMessage)).to.be.true;
                  await submitForm(true);
                  expect(await helpers.isTextInDom(driver, 'Please fill in all required fields')).to.be.true;
                });
              }

            });
          });
        }

      });
    }

    return Promise.all(Object.keys(users).map(user=>{
      _runTests(users[user]);
    }));
  }
  await runTests(testUsers);
});


// xdescribe('Visiting Workspace Creation', function() {
//   this.timeout(helpers.timeoutTestMsStr);

//   console.log('in describe 1');
//   // let driver = null;

//   xdescribe('should display folder set options', function() {
//     it('should display folders dropdown menu', async function() {
//       expect(await helpers.isElementVisible(driver, 'section.third.folders select')).to.be.true;
//     });
//     it('folders dropdown menu should have at least 3 options', async function() {
//       expect(await helpers.getWebElements(driver, 'section.third.folders select>option')).to.have.lengthOf.at.least(3);
//     });
//   });

